--- a/gloss-counter.cabal
+++ b/gloss-counter.cabal
@@ -23,4 +23,5 @@ executable gloss-counter
                      , Update
                      , Bullet
                      , Asteroid
+                     , Collision
   default-language:    Haskell2010
