file system thingy

--- a/gloss-counter.cabal
+++ b/gloss-counter.cabal
@@ -29,4 +29,6 @@ executable gloss-counter
                      , ViewPaused
                      , ViewGameOver
                      , Constants
+                     , Score
+                     , HighScore
   default-language:    Haskell2010
